// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TicketStatus component closed ticket 1`] = `
<div
  className="d-inline-block mr-2"
>
  <Button
    className="d-inline-block"
    color="success"
    id="change-status-button"
    onClick={[Function]}
    tag="button"
    type="button"
  >
    <i
      className="fa fa-fw fa-check mr-1 undefined"
    />
  </Button>
  <Tooltip
    delay={0}
    placement="bottom"
    target="change-status-button"
  >
    Reopen (press O)
  </Tooltip>
</div>
`;

exports[`TicketStatus component open ticket 1`] = `
<div
  className="d-inline-block mr-2"
>
  <Button
    className="d-inline-block"
    color="secondary"
    id="change-status-button"
    onClick={[Function]}
    tag="button"
    type="button"
  >
    <i
      className="fa fa-fw fa-check mr-1"
    />
    Close
  </Button>
  <Tooltip
    delay={0}
    placement="bottom"
    target="change-status-button"
  >
    Close (press C)
  </Tooltip>
</div>
`;
